# lapce-copilot

./: .gitignore  Cargo.toml  README.md  volt.toml
src/: copilot.rs  main.rs
